; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_read.c__TIFFReadEncodedStripAndAllocBuffer.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_read.c__TIFFReadEncodedStripAndAllocBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64 (%struct.TYPE_9__*, i8*, i64, i32)*, i32 (%struct.TYPE_9__*, i8*, i64)*, i32 }

@.str = private unnamed_addr constant [26 x i8] c"No space for strip buffer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @_TIFFReadEncodedStripAndAllocBuffer(%struct.TYPE_9__* %0, i32 %1, i8** %2, i64 %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8**, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8** %2, i8*** %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load i8**, i8*** %9, align 8
  %15 = load i8*, i8** %14, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %24

17:                                               ; preds = %5
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i8**, i8*** %9, align 8
  %21 = load i8*, i8** %20, align 8
  %22 = load i64, i64* %11, align 8
  %23 = call i64 @TIFFReadEncodedStrip(%struct.TYPE_9__* %18, i32 %19, i8* %21, i64 %22)
  store i64 %23, i64* %6, align 8
  br label %86

24:                                               ; preds = %5
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %26 = load i32, i32* %8, align 4
  %27 = call i64 @TIFFReadEncodedStripGetStripSize(%struct.TYPE_9__* %25, i32 %26, i32* %13)
  store i64 %27, i64* %12, align 8
  %28 = load i64, i64* %12, align 8
  %29 = icmp eq i64 %28, -1
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  store i64 -1, i64* %6, align 8
  br label %86

31:                                               ; preds = %24
  %32 = load i64, i64* %11, align 8
  %33 = icmp ne i64 %32, -1
  br i1 %33, label %34, label %40

34:                                               ; preds = %31
  %35 = load i64, i64* %11, align 8
  %36 = load i64, i64* %12, align 8
  %37 = icmp slt i64 %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %34
  %39 = load i64, i64* %11, align 8
  store i64 %39, i64* %12, align 8
  br label %40

40:                                               ; preds = %38, %34, %31
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %42 = load i32, i32* %8, align 4
  %43 = call i32 @TIFFFillStrip(%struct.TYPE_9__* %41, i32 %42)
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %46, label %45

45:                                               ; preds = %40
  store i64 -1, i64* %6, align 8
  br label %86

46:                                               ; preds = %40
  %47 = load i64, i64* %10, align 8
  %48 = call i8* @_TIFFmalloc(i64 %47)
  %49 = load i8**, i8*** %9, align 8
  store i8* %48, i8** %49, align 8
  %50 = load i8**, i8*** %9, align 8
  %51 = load i8*, i8** %50, align 8
  %52 = icmp eq i8* %51, null
  br i1 %52, label %53, label %60

53:                                               ; preds = %46
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %55 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %54, i32 0, i32 2
  %56 = load i32, i32* %55, align 8
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %58 = call i32 @TIFFFileName(%struct.TYPE_9__* %57)
  %59 = call i32 @TIFFErrorExt(i32 %56, i32 %58, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i64 -1, i64* %6, align 8
  br label %86

60:                                               ; preds = %46
  %61 = load i8**, i8*** %9, align 8
  %62 = load i8*, i8** %61, align 8
  %63 = load i64, i64* %10, align 8
  %64 = call i32 @_TIFFmemset(i8* %62, i32 0, i64 %63)
  %65 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %66 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %65, i32 0, i32 0
  %67 = load i64 (%struct.TYPE_9__*, i8*, i64, i32)*, i64 (%struct.TYPE_9__*, i8*, i64, i32)** %66, align 8
  %68 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %69 = load i8**, i8*** %9, align 8
  %70 = load i8*, i8** %69, align 8
  %71 = load i64, i64* %12, align 8
  %72 = load i32, i32* %13, align 4
  %73 = call i64 %67(%struct.TYPE_9__* %68, i8* %70, i64 %71, i32 %72)
  %74 = icmp sle i64 %73, 0
  br i1 %74, label %75, label %76

75:                                               ; preds = %60
  store i64 -1, i64* %6, align 8
  br label %86

76:                                               ; preds = %60
  %77 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %78 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %77, i32 0, i32 1
  %79 = load i32 (%struct.TYPE_9__*, i8*, i64)*, i32 (%struct.TYPE_9__*, i8*, i64)** %78, align 8
  %80 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %81 = load i8**, i8*** %9, align 8
  %82 = load i8*, i8** %81, align 8
  %83 = load i64, i64* %12, align 8
  %84 = call i32 %79(%struct.TYPE_9__* %80, i8* %82, i64 %83)
  %85 = load i64, i64* %12, align 8
  store i64 %85, i64* %6, align 8
  br label %86

86:                                               ; preds = %76, %75, %53, %45, %30, %17
  %87 = load i64, i64* %6, align 8
  ret i64 %87
}

declare dso_local i64 @TIFFReadEncodedStrip(%struct.TYPE_9__*, i32, i8*, i64) #1

declare dso_local i64 @TIFFReadEncodedStripGetStripSize(%struct.TYPE_9__*, i32, i32*) #1

declare dso_local i32 @TIFFFillStrip(%struct.TYPE_9__*, i32) #1

declare dso_local i8* @_TIFFmalloc(i64) #1

declare dso_local i32 @TIFFErrorExt(i32, i32, i8*) #1

declare dso_local i32 @TIFFFileName(%struct.TYPE_9__*) #1

declare dso_local i32 @_TIFFmemset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
